--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "highcharts-react-official": "^2.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-highcharts": "^16.0.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
